Fix theme flash & star shift

--- a/components/styles/wave.module.scss
+++ b/components/styles/wave.module.scss
@@ -54,6 +54,7 @@ $dark-bg: mix(variables.$white, variables.$primary-accent, 15%);
     position: fixed;
     transition-duration: variables.$theme-transition-duration;
     opacity: 0;
+    width: 100%;
     transition-property: opacity;
 
     .particles {
